roco-gen/tests/templates/snapshots/generate[tests_task_file]@task.snap
---
source: roco-gen/tests/templates/task.rs
expression: "fs::read_to_string(tests_task_path.join(\"cleanup.rs\")).expect(\"Failed to read generated tests task file: cleanup.rs\")"
---
use tester::app::App;
use roco_rs::{task, testing::prelude::*};

use roco_rs::boot::run_task;
use serial_test::serial;

#[tokio::test]
#[serial]
async fn test_can_run_cleanup() {
    let boot = boot_test::<App>().await.unwrap();

    assert!(
        run_task::<App>(&boot.app_context, Some(&"cleanup".to_string()), &task::Vars::default())
            .await
            .is_ok()
    );
}
