roco-gen/tests/templates/snapshots/generate[text_t_file]@mailer.snap
---
source: roco-gen/tests/templates/mailer.rs
expression: "fs::read_to_string(path).unwrap_or_else(|_| panic!(\"{name} missing\"))"
---
welcome to acmeworld!
