roco-gen/tests/templates/snapshots/generate[views_[edit]]@Html_scaffold.snap
---
source: roco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
snapshot_kind: text
---
{% extends "base.html" %}

{% block title %}
Edit movie: {{ item.id }}
{% endblock title %}

{% block page_title %}
Edit movie: {{ item.id }}
{% endblock page_title %}

{% block content %}
<div class="mb-10">
    <form action="/movies/{{ item.id }}" method="post" class="flex-1 lg:max-w-2xl">
    <div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">title</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" id="title" name="title" type="text" value="{{item.title}}"  />
</div>
        <div class="space-y-2">
    <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70" for=":r2l:-form-item">user_id</label>
    <input class="flex h-9 w-full rounded-md border border-input bg-transparent px-3 py-1 text-base shadow-sm md:text-sm" min="-2147483648" max="2147483647" id="user_id" name="user_id" type="number" value="{{item.user_id}}"  step="1" />
</div>
        <div>
            <div class="mt-5">
                <button class=" text-xs py-3 px-6 rounded-lg bg-gray-900 text-white" type="submit">Submit</button>
                <button class="text-xs py-3 px-6 rounded-lg bg-red-600 text-white"
                            onclick="confirmDelete(event, '/movies/{{ item.id }}', '/movies' )">Delete</button>
            </div>
        </div> 
    </form>
    <div id="success-message" class="mt-4"></div>
    <br />
    <a href="/movies">Back to movie</a>
</div>
{% endblock content %}

{% block js %}

{% endblock js %}
